# lumberjack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_perf_test.sh
.kiro/specs/lumberjack/: design.md  requirements.md  tasks.md
.kiro/specs/pretty-backend/: design.md  requirements.md  tasks.md
cmake/: lumberjackConfig.cmake.in
examples/: CMakeLists.txt  basic.cpp  custom_backend.cpp  spans.cpp
include/lumberjack/: lumberjack.h  utils.h
src/: builtin.cpp  core.cpp  pretty.cpp
tests/: CMakeLists.txt  PERF_README.md  perf_branching_comparison.cpp  test_backend_lifecycle.cpp  test_backend_message_delivery.cpp  test_backend_roundtrip.cpp  test_builtin_output.cpp  test_log_level_gating.cpp  test_log_level_ordering.cpp  test_pretty_backend_api.cpp  test_pretty_color_coding.cpp  test_pretty_message_format.cpp  test_span_callbacks.cpp  test_span_level_gating.cpp  test_span_lifecycle.cpp  test_thread_safety.cpp
